--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "nodejs-typescript-boilerplate",
-  "version": "0.0.0",
-  "description": "nodejs-typescript-boilerplate",
+  "name": "devPlayAutoCoupon",
+  "version": "1.0.0",
+  "description": "devPlayAutoCoupon",
+  "main": "./src/main.ts",
+  "bin": {
+    "devplay": "./dist/src/main.js"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -18,30 +22,40 @@
     "@types/node": "^14.14",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^3.9.1",
-    "eslint-config-prettier": "^7.2.0",
     "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-jest": "^24.1.3",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
-    "prettier": "^2.2.1",
     "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.0",
+    "ts-node-dev": "^1.1.1",
     "tsutils": "^3.20.0",
-    "typescript": "^4.1.3",
-    "ts-node-dev": "^1.1.1"
+    "typescript": "^4.1.3"
   },
   "scripts": {
-    "dev": "yarn prettier && ts-node-dev src/main.ts --trace-sync-io",
-    "test": "jest",
+    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/main.ts",
+    "create": "yarn build && yarn test",
+    "build": "tsc -p .",
+    "test": "sudo npm i -g && devplay",
+    "refresh": "rm -rf ./node_modules ./package-lock.json && yarn",
     "lint": "eslint \"{src,test}/**/*.ts\" --fix",
-    "prettier": "prettier --write --config .prettierrc ./src///*.ts && prettier --write --config .prettierrc ./test///*.ts",
-    "build": "tsc",
-    "prebuild": "rimraf ./dist"
+    "prettier": "prettier --write --config .prettierrc ./src///*.ts && prettier --write --config .prettierrc ./test///*.ts"
   },
   "author": "CuteWisp <sweatpotato13@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^4.1.0",
+    "clear": "^0.1.0",
+    "colors": "^1.4.0",
+    "colorts": "^0.1.63",
+    "commander": "^7.0.0",
+    "figlet": "^1.5.0",
+    "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.7",
+    "path": "^0.12.7",
     "tslib": "^2.1.0"
   },
   "volta": {
