--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,17 +1,58 @@
-name: Node.js CI
+# .github/workflows/nodejs.yml
+name: Node CI
 
-on: [push]
+on: [push, pull_request] # Run on Push and Pull Requests
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        node-version: [14.x]
     steps:
     - uses: actions/checkout@v2
-    - uses: volta-cli/action@v1
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
     - run: npm install -g yarn
-    - run: yarn
-    - run: yarn lint
-      env:
-        CI: true
+    - name: yarn build
+      working-directory: .
+      run: |
+        yarn
+        yarn build
+  lint:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm install -g yarn
+    - name: yarn lint
+      working-directory: .
+      run: |
+        yarn
+        yarn lint
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm install -g yarn
+    - name: yarn test
+      working-directory: .
+      run: |
+        yarn
+        yarn test
+
